# ocaml_lang

./: .gitignore  .ocamlformat  README.md  dune-project
lib/: bind_practice.ml  check.ml  dune  lexer.ml  lowering.ml  monad_practice.ml  parser.ml  state.ml  step.ml
test/: dune  test.ml
